--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepare": "husky install"
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -44,7 +43,6 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
-    "husky": "^8.0.0",
     "nodemon": "^3.1.7",
     "supabase": "^2.0.0"
   },
